# Terminal-Based-Stock-Ticker

./: CMakeLists.txt  LICENSE.md
include/: network.hpp  parser.hpp
src/: main.cpp  network.cpp
